--- a/Final/index.html
+++ b/Final/index.html
@@ -23,9 +23,9 @@
 
 
     <artists>
-        <img class="blues" id="brent" src="brent.jpg">
-        <img class="blues" id="fantasia" src="fantasia.jpg">
-        <img class="blues" id="leon" src="leon.jpg">
+        <img class="blues" id="brent" src="brent2.jpg">
+        <img class="blues" id="fantasia" src="fantasia2.jpg">
+        <img class="blues" id="leon" src="leon3.jpg">
 
     </artist>
 
